# apparitor

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/skills/address-pr-feedback/: SKILL.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  clear-scorecard-alerts.yml  codeql.yml  fuzz.yml  pip-audit.yml  release.yml  scorecard.yml
docs/: architecture.md  audit-log.md  eu-ai-act.md  requirements.md  security-review.md  setup.md
examples/: README.md
examples/avp/: README.md
examples/cedar/: README.md  docker-compose.yml  entities.json  policies.cedar  smoke.sh
examples/cedar/gateway/: Dockerfile  gateway.py
examples/cerbos/: README.md
examples/gateway/: README.md  demo.py
examples/mock_pdp/: README.md  mock_pdp.py
examples/observability/: README.md  run.py
examples/opa/: README.md  data.json  docker-compose.yml  policy.rego  smoke.sh
examples/opa/gateway/: Dockerfile  gateway.py
examples/openfga/: README.md  docker-compose.yml  model.json  smoke.sh  tuples.json
examples/scenarios/: README.md  run.py
examples/three-peps/: README.md  demo.py
fuzz/: README.md  fuzz_pdp_response.py  fuzz_tool_calls.py  fuzz_url_guard.py
scripts/: generate_sbom.sh
src/apparitor/: __init__.py  a2a.py  adapters.py  backends.py  cache.py  cedar.py  client.py  config.py  decision.py  engine.py  errors.py  fastmcp.py  mapping.py  metrics.py  models.py  nemo.py  scanner.py
src/authzen_llamafirewall/: __init__.py  cache.py  client.py  config.py  decision.py  engine.py  errors.py  mapping.py  metrics.py  models.py  scanner.py
tests/: conftest.py
tests/conformance/: README.md  cases.json  interop_todo_cases.json  test_conformance.py  test_interop_todo.py
tests/integration/: _helpers.py  test_cedar.py  test_opa.py  test_opa_native.py  test_openfga.py
tests/unit/: test_a2a_executor.py  test_adapters.py  test_backends.py  test_cache.py  test_cedar_backend.py  test_cedar_gateway.py  test_client.py  test_decision.py  test_engine.py  test_fastmcp_middleware.py  test_golden.py  test_log_contract.py  test_mapping.py  test_metrics.py  test_mock_pdp.py  test_models.py  test_nemo_backend.py  test_opa_gateway.py  test_scanner.py  test_security.py  test_smoke.py
