[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "authzen-llamafirewall-scanner"
dynamic = ["version"]
description = "AuthZEN 1.0 authorization scanner plugin for Meta's LlamaFirewall — answers \"is this agent allowed to do this?\""
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Jonny Hawley" }]
keywords = [
  "authzen",
  "llamafirewall",
  "authorization",
  "ai-agents",
  "agent-security",
  "pdp",
  "openfga",
  "cedar",
  "opa",
  "cerbos",
  "mcp",
]
# NOTE: per PEP 639 the license is declared via the SPDX `license` field above,
# so no "License ::" trove classifier is included here (they are mutually redundant).
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = [
  # Core runtime is intentionally LlamaFirewall-free so the AuthZEN client and
  # models are usable/testable standalone. LlamaFirewall is an optional extra
  # (it pulls a heavy ML stack); only `authzen_llamafirewall.scanner` needs it.
  "httpx>=0.27,<0.29",
  "pydantic>=2.5,<3",
]

[project.optional-dependencies]
# The scanner plugin itself. Importing `authzen_llamafirewall.scanner` without
# this installed raises a clear MissingDependencyError.
llamafirewall = ["llamafirewall>=0.0.1"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5",
]
# Docker-gated integration tests (examples/openfga, examples/cedar). Kept out of `dev`
# so the default unit run needs no Docker; installed only by the `integration` CI job.
integration = ["testcontainers>=4"]
# CycloneDX SBOM generator (see scripts/generate_sbom.sh). Pinned here — not in the shell
# script — so Dependabot's pip ecosystem keeps it current, matching the repo's pinned-and-
# maintained posture. Build-only tooling, like `build`/`twine`; never a runtime dependency.
sbom = ["cyclonedx-bom==7.3.0"]

[project.urls]
Homepage = "https://github.com/jhawlwut/authzen-scanner"
Repository = "https://github.com/jhawlwut/authzen-scanner"
Issues = "https://github.com/jhawlwut/authzen-scanner/issues"
Documentation = "https://github.com/jhawlwut/authzen-scanner/tree/main/docs"
Changelog = "https://github.com/jhawlwut/authzen-scanner/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/authzen_llamafirewall/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/authzen_llamafirewall"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

# LlamaFirewall ships no type stubs and may be absent in the lint environment.
[[tool.mypy.overrides]]
module = ["llamafirewall.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
# Coverage gate is enforced (90% line+branch). scanner.py is omitted from the default
# run (it needs LlamaFirewall) and is covered by the `scanner` CI job — see [tool.coverage.run].
addopts = "-m 'not integration' --strict-markers --cov=authzen_llamafirewall --cov-branch --cov-fail-under=90"
markers = [
  "unit: fast, isolated, no network or docker",
  "integration: requires external services; excluded from the default run",
  "docker: requires a running Docker daemon (skipped when unavailable)",
]

[tool.coverage.run]
branch = true
source = ["authzen_llamafirewall"]
# scanner.py is the only LlamaFirewall-dependent module; it is covered by the separate
# `scanner` CI job that installs the [llamafirewall] extra, not the default unit run.
omit = ["*/scanner.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]
