[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "apparitor"
dynamic = ["version"]
description = "Vendor-neutral authorization for AI agents — checks agent tool calls against your policy engine (AuthZEN, Cedar, OpenFGA, Rego) from inside agentic firewalls. Answers \"is this agent allowed to do this?\""
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Jonny Hawley" }]
keywords = [
  "authorization",
  "ai-agents",
  "agent-security",
  "agentic-firewall",
  "llamafirewall",
  "authzen",
  "openfga",
  "cedar",
  "rego",
  "opa",
  "cerbos",
  "pdp",
  "mcp",
]
# NOTE: per PEP 639 the license is declared via the SPDX `license` field above,
# so no "License ::" trove classifier is included here (they are mutually redundant).
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = [
  # Core runtime is intentionally LlamaFirewall-free so the AuthZEN client and
  # models are usable/testable standalone. LlamaFirewall is an optional extra
  # (it pulls a heavy ML stack); only `apparitor.scanner` needs it.
  "httpx>=0.27,<0.29",
  "pydantic>=2.5,<3",
]

[project.optional-dependencies]
# The scanner plugin itself. Importing `apparitor.scanner` without
# this installed raises a clear MissingDependencyError.
llamafirewall = ["llamafirewall>=0.0.1"]
# Native in-process Cedar backend (ScannerConfig(backend="cedar")). cedarpy wraps the
# Apache-2.0 Cedar engine (Rust); its version tracks the Cedar major.minor it embeds. Optional
# so the core stays standalone — importing `apparitor.cedar` without it raises
# MissingDependencyError. Bump deliberately in lockstep with the Cedar engine.
cedar = ["cedarpy>=4.8,<4.9"]
# NeMo Guardrails (NVIDIA) rail adapter (apparitor.nemo). The second agentic-firewall
# integration alongside the LlamaFirewall scanner. Optional so the core stays standalone —
# importing `apparitor.nemo` without it raises MissingDependencyError. NeMo is pre-1.0; the
# floor guarantees the register_action / output_mapping / ActionResult APIs the adapter uses,
# and the ceiling guards against a breaking minor (bump deliberately).
nemo = ["nemoguardrails>=0.21,<0.23"]
# FastMCP server-middleware adapter (apparitor.fastmcp) — the MCP-boundary PEP. Optional so
# the core stays standalone — importing `apparitor.fastmcp` without it raises
# MissingDependencyError. Wider than the other extras' pins, deliberately: the middleware API
# used (Middleware.on_call_tool, get_access_token, ToolError) is stable across 2.14 (the last
# maintained 2.x line) and 3.x, and the `fastmcp` CI job matrix exercises both. 3.0.x is
# excluded — it shipped middleware-dispatch bugs fixed in 3.0.1 and the matrix tests >=3.1.
# NOTE: server composition (mount) names differ across the range — a child-mounted server is
# seen as the parent's name on 2.14 but the child's on 3.x — so deployments under mounting
# must pin `server_label` for stable policy keys (see apparitor.fastmcp). Drop the 2.x leg and
# raise the floor when that line stops receiving maintenance.
fastmcp = ["fastmcp>=2.14,!=3.0.*,<4"]
# A2A agent-executor adapter (apparitor.a2a) — the agent-to-agent PEP. Optional so the core
# stays standalone — importing `apparitor.a2a` without it raises MissingDependencyError. The
# adapter needs only the base SDK (AgentExecutor/RequestContext); serving over HTTP needs the
# SDK's own [http-server] extra, which the `a2a` CI job installs for the end-to-end harness.
# Floor 1.1 = the verified proto-first 1.x API; bump deliberately.
a2a = ["a2a-sdk>=1.1,<2"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5",
]
# Docker-gated integration tests (examples/openfga, examples/cedar, examples/opa). Kept out of `dev`
# so the default unit run needs no Docker; installed only by the `integration` CI job.
integration = ["testcontainers>=4"]
# CycloneDX SBOM generator (see scripts/generate_sbom.sh). Pinned here — not in the shell
# script — so Dependabot's pip ecosystem keeps it current, matching the repo's pinned-and-
# maintained posture. Build-only tooling, like `build`/`twine`; never a runtime dependency.
sbom = ["cyclonedx-bom==7.3.0"]

[project.urls]
Homepage = "https://github.com/jhawlwut/apparitor"
Repository = "https://github.com/jhawlwut/apparitor"
Issues = "https://github.com/jhawlwut/apparitor/issues"
Documentation = "https://github.com/jhawlwut/apparitor/tree/main/docs"
Changelog = "https://github.com/jhawlwut/apparitor/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/apparitor/__init__.py"

[tool.hatch.build.targets.sdist]
# Explicit include list so the sdist is reproducible and contains exactly what
# is needed to rebuild the wheel and run the test suite from source.
include = [
  "src/",
  "tests/",
  "docs/",
  "examples/",
  "LICENSE",
  "NOTICE",
  "CHANGELOG.md",
  "README.md",
  "CONTRIBUTING.md",
  "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/apparitor"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

# LlamaFirewall, cedarpy and nemoguardrails ship no type stubs; fastmcp/mcp ship types but
# may be absent in the lint environment.
[[tool.mypy.overrides]]
module = ["llamafirewall.*", "cedarpy.*", "nemoguardrails.*", "fastmcp.*", "mcp.*", "a2a.*"]
ignore_missing_imports = true

# apparitor.fastmcp subclasses fastmcp's Middleware and apparitor.a2a subclasses the A2A
# SDK's AgentExecutor — `Any` when the SDK is absent (lint env) but fully typed when present
# (their CI jobs, local dev) — so the `type: ignore[misc]` on each class is required in the
# first case and unused in the second.
[[tool.mypy.overrides]]
module = ["apparitor.fastmcp", "apparitor.a2a"]
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
# Coverage gate is enforced (90% line+branch). scanner.py is omitted from the default
# run (it needs LlamaFirewall) and is covered by the `scanner` CI job — see [tool.coverage.run].
addopts = "-m 'not integration' --strict-markers --cov=apparitor --cov-branch --cov-fail-under=90"
markers = [
  "unit: fast, isolated, no network or docker",
  "integration: requires external services; excluded from the default run",
  "docker: requires a running Docker daemon (skipped when unavailable)",
]

[tool.coverage.run]
branch = true
source = ["apparitor"]
# scanner.py (LlamaFirewall), cedar.py (cedarpy), nemo.py (nemoguardrails), fastmcp.py
# (fastmcp) and a2a.py (a2a-sdk) each depend on an optional extra and are covered by their
# own CI jobs (`scanner`, `cedar`, `nemo`, `fastmcp`, `a2a`) that install the extra — not
# the default unit run, which must import the package without those deps.
omit = ["*/scanner.py", "*/cedar.py", "*/nemo.py", "*/fastmcp.py", "*/a2a.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]
